# feishu-md-repo

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  app.db.backup  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/core-service/: .env.example  package.json  tsconfig.build.json
apps/core-service/src/: app.ts  binding-task-preempt.ts  binding-task-registry.ts  comment-import-coordinator.ts  config.ts  index.ts  scheduler.ts  sync-coordinator.ts
apps/core-service/src/bot/: broadcaster.ts  command-handler.ts  manager.ts  quiet-thread.ts  ws-listener.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/ui/: index.html  package.json  vite.config.ts
apps/ui/src/: App.tsx  index.css  main.tsx
apps/ui/src/components/: BroadcastTargetEditor.tsx  ConnectionStatusBadge.tsx  icons.tsx  (+5 more)
scripts/: check-secrets.mjs  debug-empty-board-section.ts  debug-section-batch.ts  dump-connector.ts  dump-ref-cross-conn.ts  inspect-board-sections.ts  inspect-feishu-doc-links.ts  inspect-ref-connectors.ts  probe-clone-ref-cross-conn.ts  probe-connector-parent.ts  probe-connector-real-ids.ts  probe-cross-section-connector.ts  probe-global-connector.ts  probe-mindmap-batch.ts  probe-mindmap-create.ts  probe-section-batch.ts  probe-section-connector-batch.ts  probe-section-connector-coords.ts  probe-section-create.ts  probe-section-two-step.ts  probe-sg1-cross-batch.ts  verify-subgraph-section.ts
(+23 files in other folders)
