[package]
name = "feishu-md-desktop"
version = "0.1.0"
description = "Local desktop app to sync Git repositories with Feishu"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[lib]
name = "feishu_md_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
